--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     tools:context=".OrderDetailActivity">
 
     <android.support.v7.widget.CardView
@@ -12,77 +11,74 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:cardElevation="4dp"
-        >
+        app:cardElevation="4dp">
 
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/order_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:gravity="center_vertical|start"
-                    android:textAllCaps="true"
-                    android:textStyle="bold"
                     android:text="Order ID"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textAllCaps="true"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/order_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:gravity="center_vertical|start"
-                    android:textAllCaps="true"
-                    android:textStyle="italic"
                     android:text="Order Phone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textAllCaps="true"
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/order_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:gravity="center_vertical|start"
-                    android:textAllCaps="true"
-                    android:textStyle="italic"
                     android:text="$1000"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textAllCaps="true"
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/order_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:gravity="center_vertical|start"
-                    android:textAllCaps="true"
-                    android:textStyle="italic"
                     android:text="Address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textAllCaps="true"
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/order_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:gravity="center_vertical|start"
-                    android:textAllCaps="true"
-                    android:textStyle="italic"
                     android:text="Comment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textAllCaps="true"
+                    android:textStyle="italic" />
 
 
             </LinearLayout>
-
-
 
 
         </LinearLayout>
@@ -90,27 +86,24 @@
     </android.support.v7.widget.CardView>
 
     <LinearLayout
-        android:layout_below="@+id/order_info"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/order_info"
+        android:orientation="vertical">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginBottom="20dp"
             android:text="Detail"
             android:textColor="@android:color/white"
-            android:textSize="30sp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textSize="30sp" />
 
         <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/lstFoods"
-            />
-
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 
     </LinearLayout>
